# brother-yields

./: .env.example  .gitignore  README.md
agent/: Cargo.toml
backend-agent/: .env.example  Cargo.toml
backend-agent/knowledge/: nostra-lp.md  nostra.md
backend-agent/src/: insights.rs  lib.rs  main.rs  market.rs  math.rs  start.rs  tokens.rs  types.rs  utils.rs
backend-agent/src/agent_tools/: mod.rs  portfolio.rs  yield_analyzer.rs
backend-agent/src/agents/: lp_pro_man.rs  mod.rs  navigator.rs
backend-agent/src/backend/: messaging.rs  mod.rs
backend-agent/tests/: integration_test.rs
brother-agent/: .env.example  Cargo.toml
brother-agent/gql/: query.graphql  schema.graphql
brother-agent/src/: main.rs  market.rs  math.rs  query.rs  tokens.rs  types.rs  utils.rs
brother-agent/src/agent_tools/: mod.rs  portfolio.rs  yield_analyzer.rs
brother-agent/src/agents/: mod.rs  navigator.rs
brother-agent/src/backend/: mod.rs
contracts/: Scarb.toml
contracts/src/: lib.cairo
contracts/src/contract/: brotheryield.cairo  interface.cairo
contracts/tests/: test_contract.cairo
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ParticlesBackground.tsx  PoolStats.tsx
frontend/app/components/starknet/: MintSection.tsx  StarknetProvider.tsx  WalletConnect.tsx
x-scraper/: x_insight_scraper.py
