[package]
name = "backend_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
chrono = "0.4.39"
dotenv = "0.15.0"
graphql_client = "0.14.0"
graphql_client_cli = "0.14.0"
parking_lot = "0.12.3"
reqwest = { version = "0.12.12", features = ["json"] }
rig-core = "0.6.0"
schemars = "0.8.21"
serde = "1.0.217"
serde_json = "1.0.135"
starknet = "0.12.0"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
